# bookstore

./: Dockerfile  Makefile  docker-compose.yml  estrutura_completa.txt  pyproject.toml  requirements.txt
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: manage.py  pyproject.toml  settings.py  urls.py  views.py
bookstore/myenv/: pyvenv.cfg
bookstore/myenv/Scripts/: activate  activate.bat
order/migrations/: 0001_initial.py
order/tests/test_viewsets/: test_order_viewset.py
product/migrations/: 0001_initial.py  0002_rename_categories_product_category.py
product/models/: category.py  product.py
product/viewsets/: category_viewset.py  product_viewset.py
