[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = ""
authors = ["Rafael Almeida <dealmeida.silva@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1"
django-rest-framework = "^0.1.0"
django-extensions = "^3.2.3"
factory-boy = "^3.3.1"
django-debug-toolbar = "^4.4.6"
psycopg2 = "^2.9.9"
flake8 = "^7.1.1"
gitpython = "^3.1.43"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
