[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = ""
authors = ["Rafael Almeida <dealmeida.silva@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^3.2.1"
factory-boy = "^3.3.0"
Django = "^5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
